--- a/App/src/app/auth/profile/profile.page.html
+++ b/App/src/app/auth/profile/profile.page.html
@@ -15,13 +15,13 @@
             alt=""
           />
         </ion-item>
-        <!-- <ion-text class="change-profile" (click)="uploadFile()">
+        <ion-text class="change-profile" (click)="uploadFile()">
           <img class="edit" src="../../../assets/edit.png" alt="">
           <ion-badge color="primary">
-            {{'changeProfile' | translate}}
+            {{'Change Profile' | translate}}
           </ion-badge>
         </ion-text> 
-         -->
+        
         <ion-row class="ion-justify-content-end">
           <ion-item lines="none" (click)="uploadFile()">
             <ion-icon name="create"></ion-icon>
