--- a/App/src/app/layout/pages/request/request.page.html
+++ b/App/src/app/layout/pages/request/request.page.html
@@ -12,7 +12,7 @@
       <ion-grid>
         <ion-row class="ion-align-items-center ion-justify-content-center">
           <ion-col size="12">
-            <ion-item fill="outline" class="input">
+            <ion-item fill="outline" class="input" lines="none">
               <ion-label position="floating" lablePlacement="stacked"
                 >Name</ion-label
               >
@@ -25,7 +25,7 @@
         </ion-row>
         <ion-row class="ion-align-items-center ion-justify-content-center">
           <ion-col size="12">
-            <ion-item fill="outline" class="input">
+            <ion-item fill="outline" class="input" lines="none">
               <ion-label position="floating" lablePlacement="stacked"
                 >Age</ion-label
               >
@@ -36,7 +36,7 @@
 
         <ion-row class="ion-align-items-center ion-justify-content-center">
           <ion-col size="12">
-            <ion-item fill="outline">
+            <ion-item fill="outline" lines="none">
               <ion-select
                 aria-label="Gender"
                 interface="action-sheet"
@@ -53,7 +53,7 @@
 
         <ion-row *ngIf="isFemale" class="ion-align-items-center ion-justify-content-center">
           <ion-col size="12">
-            <ion-item fill="outline" class="input">
+            <ion-item fill="outline" class="input" lines="none">
               <ion-label position="floating" lablePlacement="stacked"
                 >Father/Husband</ion-label
               >
@@ -67,7 +67,7 @@
 
         <ion-row class="ion-align-items-center ion-justify-content-center">
           <ion-col size="12">
-            <ion-item fill="outline" class="input">
+            <ion-item fill="outline" class="input" lines="none">
               <ion-label  *ngIf="!f['bloodRequireDate'].value" position="floating" lablePlacement="stacked"
                 >Blood Require Date</ion-label
               >
@@ -87,7 +87,7 @@
         </ion-row>
         <ion-row class="ion-align-items-center ion-justify-content-center">
           <ion-col size="12">
-            <ion-item fill="outline" class="input">
+            <ion-item fill="outline" class="input" lines="none">
               <ion-label position="floating" lablePlacement="stacked"
                 >mobileNo</ion-label
               >
@@ -101,7 +101,7 @@
 
         <ion-row class="ion-align-items-center ion-justify-content-center">
           <ion-col size="12">
-            <ion-item fill="outline" class="input">
+            <ion-item fill="outline" class="input" lines="none">
               <ion-label position="floating" lablePlacement="stacked"
                 >location</ion-label
               >
@@ -114,7 +114,7 @@
         </ion-row>
         <ion-row class="ion-align-items-center ion-justify-content-center">
           <ion-col size="12">
-            <ion-item fill="outline">
+            <ion-item fill="outline" lines="none">
               <ion-select
                 aria-label="bloodGroup"
                 interface="action-sheet"
@@ -129,7 +129,7 @@
         </ion-row>
         <ion-row class="ion-align-items-center ion-justify-content-center">
           <ion-col size="12">
-            <ion-item fill="outline" class="input">
+            <ion-item fill="outline" class="input" lines="none">
               <ion-label position="floating" lablePlacement="stacked"
                 >hemoglobin</ion-label
               >
@@ -144,7 +144,7 @@
 
         <ion-row class="ion-align-items-center ion-justify-content-center">
           <ion-col size="12">
-            <ion-item fill="outline" class="input">
+            <ion-item fill="outline" class="input" lines="none">
               <ion-label position="floating" lablePlacement="stacked"
                 >units</ion-label
               >
@@ -159,7 +159,7 @@
 
         <ion-row class="ion-align-items-center ion-justify-content-center">
           <ion-col size="12">
-            <ion-item fill="outline">
+            <ion-item fill="outline" lines="none">
               <ion-label position="floating" lablePlacement="stacked"
                 >State
               </ion-label>
