--- a/App/src/app/shared/models/no-data/no-data.component.html
+++ b/App/src/app/shared/models/no-data/no-data.component.html
@@ -1,5 +1,5 @@
 <ion-content [fullscreen]="true">
   <ion-item lines="none">
-    <img src="../../../../assets/" alt="" />
+    <img src="../../../../assets/no-data-icon-17.jpg" alt="" />
   </ion-item>
 </ion-content>
