--- a/App/src/app/shared/models/admin-request-mylist/admin-request-mylist.component.html
+++ b/App/src/app/shared/models/admin-request-mylist/admin-request-mylist.component.html
@@ -450,8 +450,15 @@
                 </ion-row>
                 <ion-row>
                   <ion-col size="12">
-                    <ion-label class="head">Illness</ion-label>
-                    <ion-label>: {{donor?.illness}}</ion-label>
+                    <ion-icon
+                      *ngIf="donor?.illness"
+                      name="checkbox"
+                    ></ion-icon>
+                    <ion-icon
+                      *ngIf="!donor?.illness"
+                      name="close"
+                    ></ion-icon>
+                    <ion-label class="head donor-illness">Illness</ion-label>
                   </ion-col>
                 </ion-row>
                 <ion-row>
