--- a/App/src/app/shared/models/bloodrequest-mylist/bloodrequest-mylist.component.html
+++ b/App/src/app/shared/models/bloodrequest-mylist/bloodrequest-mylist.component.html
@@ -207,8 +207,15 @@
               </ion-row>
               <ion-row>
                 <ion-col size="12">
-                  <ion-label class="head">Illness</ion-label>
-                  <ion-label>: {{data?.donor?.illness}}</ion-label>
+                  <ion-icon
+                    *ngIf="data?.donor?.illness"
+                    name="checkbox"
+                  ></ion-icon>
+                  <ion-icon
+                    *ngIf="!data?.donor?.illness"
+                    name="close"
+                  ></ion-icon>
+                  <ion-label class="head donor-illness">Illness</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row>
