responsive, statecity resetform,ui of profile and registration

--- a/App/src/app/auth/login/login.page.scss
+++ b/App/src/app/auth/login/login.page.scss
@@ -1,15 +1,9 @@
 .logo{
     text-align: center;
    img{
-    width: 30%;
+    width: 90%;
    }
 }
-
-.center-label {
-    text-align: center;
-    font-size: larger;
-    
-  }
 
   .text{
     font-size: larger;
@@ -17,22 +11,20 @@
     
   }
 
-// ion-row{
-//     margin-bottom: 1rem;
-// }
-
 ion-content {
     position: relative;
     height: 100vh;
+    display: flex;
+    justify-content: center;
   }
   
-  ion-card {
+  .card {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 90%; /* Adjust width as needed */
-    max-width: 400px; /* Set a max-width for the card */
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; 
+    width: 90%; 
   }
 
 
