--- a/App/src/app/auth/register/register.page.scss
+++ b/App/src/app/auth/register/register.page.scss
@@ -1,20 +1,21 @@
 ion-content {
     position: relative;
     height: 100vh;
+    display: flex;
+    justify-content: center;
   }
   
-  ion-card {
+  .text{
+    
+    font-size: larger;
+    font-weight: bold;
+    
+  }
+  .card {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 90%; /* Adjust width as needed */
-    max-width: 400px; /* Set a max-width for the card */
-  }
-
-  .text{
-    margin-top: 1rem;
-    font-size: larger;
-    font-weight: bold;
-    
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    width: 90%; 
   }
