--- a/App/src/app/layout/pages/tabs/blood-requests/blood-requests.page.html
+++ b/App/src/app/layout/pages/tabs/blood-requests/blood-requests.page.html
@@ -73,17 +73,17 @@
                         </div>
                       </div>
                     </ion-col>
-                   
-                  </ion-row>
-                  <ion-row>
-                    <ion-col size="6" class="ion-text-start ion-align-items-center">
+                    <ion-col size="3" class="ion-text-end ion-align-items-center">
                       <ion-button
                       *ngIf="i.status == 'ACCEPTED'"
                       (click)="statusChange($event,i,j,'PENDING')"
                     >
                       Revert</ion-button>
                     </ion-col>
-                    <ion-col size="6" class="ion-text-end ion-align-items-center">
+                  </ion-row>
+                  <ion-row>
+                   
+                    <ion-col size="12" class="ion-text-end ion-align-items-center">
                       <ion-label class="align-status" *ngIf="i?.status != 'RECEIVED'"
                         [ngClass]="{'status-pending': i?.status == 'PENDING','status-allocated' : i?.status == 'ALLOCATED','status-received': i.status== 'RECEIVED','status-done' : i?.status == 'DONE','status-accepted' : i.status == 'ACCEPTED' ,'statusdoclose': i.status=='CLOSE'}"
                         >{{i?.status}}</ion-label>
@@ -143,10 +143,10 @@
                         </div>
                       </div>
                     </ion-col>
-                    <ion-col size="3" class="ion-no-padding"
+                    <ion-col size="3" class=" ion-text-center ion-no-padding"
                       [ngClass]="{'status-pending': l?.status == 'PENDING','status-allocated' : l?.status == 'ALLOCATED','status-received': l.status== 'RECEIVED','status-done' : l?.status == 'DONE','status-accepted' : l.status == 'ACCEPTED' ,'statusdoclose': l.status=='CLOSE'}"
                     >
-                      <ion-label class="status">{{l?.status}}</ion-label>
+                      <ion-label class="">{{l?.status}}</ion-label>
                     </ion-col>
                   </ion-row>
                   <ion-row class="ion-justify-content-center">
