--- a/App/src/app/shared/models/no-data/no-data.component.html
+++ b/App/src/app/shared/models/no-data/no-data.component.html
@@ -1,5 +1,16 @@
+<!-- <ion-header [translucent]="true">
+  <ion-toolbar color="primary">
+    <ion-back-button
+      slot="start"
+      defaultHref=""
+      (click)="dismiss()"
+    ></ion-back-button>
+    <ion-title>Details</ion-title>
+  </ion-toolbar>
+</ion-header> -->
+
 <ion-content [fullscreen]="true">
   <ion-item lines="none">
-    <img src="../../../../assets/no-data-icon-17.jpg" alt="" />
+    <img src="../../../../assets/no-data-icon-17-removebg-preview.png" alt="" />
   </ion-item>
 </ion-content>
