--- a/App/src/app/auth/login/login.page.html
+++ b/App/src/app/auth/login/login.page.html
@@ -1,20 +1,27 @@
+<ion-header [translucent]="true">
+  <ion-toolbar color="primary">
+    <ion-back-button slot="start" default-href="/layout/home"></ion-back-button>
+    <ion-title>Profile</ion-title>
+  </ion-toolbar>
+</ion-header>
+
 <ion-content [fullscreen]="true">
-  <ion-card>
+  <div class="card">
     <form [formGroup]="loginForm">
-      <ion-item>
+   
         <ion-grid>
           <ion-row class="ion-align-items-center ion-justify-content-center">
             <ion-col class="logo">
-              <img src="../../../assets/logo.jpeg" alt="LOGO" />
+              <img src="../../../assets/bloodLogo.jpg" alt="LOGO" />
             </ion-col>
           </ion-row>
           <ion-row
             class="ion-align-items-center ion-justify-content-center ion-margin-bottom"
           >
-            <ion-label class="text">LogIn</ion-label>
+            <ion-label class="text">Log In</ion-label>
           </ion-row>
           <ion-row class="ion-align-items-center ion-justify-content-center">
-            <ion-col size="12">
+            <ion-col size="10">
               <ion-item fill="outline" class="input">
                 <ion-label position="floating" label Placement="stacked"
                   >Mobile Number</ion-label
@@ -27,7 +34,7 @@
             </ion-col>
           </ion-row>
           <ion-row class="ion-align-items-center ion-justify-content-center">
-            <ion-col size="12">
+            <ion-col size="10">
               <ion-item fill="outline" class="input">
                 <ion-label position="floating">Password</ion-label>
                 <ion-input
@@ -46,7 +53,7 @@
             >
           </ion-row> -->
           <ion-row class="ion-align-items-center ion-justify-content-center">
-            <ion-col size="12">
+            <ion-col size="10">
               <ion-button
                 expand="block"
                 shape="round"
@@ -65,7 +72,6 @@
             >
           </ion-row>
         </ion-grid>
-      </ion-item>
     </form>
-  </ion-card>
+  </div>
 </ion-content>
