--- a/App/src/app/layout/pages/request/request.page.html
+++ b/App/src/app/layout/pages/request/request.page.html
@@ -12,7 +12,7 @@
       <ion-grid>
         <ion-row class="ion-align-items-center ion-justify-content-center">
           <ion-col size="12">
-            <ion-item fill="outline" class="input" lines="none">
+            <ion-item fill="outline" class="input">
               <ion-label position="floating" lablePlacement="stacked"
                 >Name</ion-label
               >
@@ -25,7 +25,7 @@
         </ion-row>
         <ion-row class="ion-align-items-center ion-justify-content-center">
           <ion-col size="12">
-            <ion-item fill="outline" class="input" lines="none">
+            <ion-item fill="outline" class="input">
               <ion-label position="floating" lablePlacement="stacked"
                 >Age</ion-label
               >
@@ -53,7 +53,7 @@
 
         <ion-row *ngIf="isFemale" class="ion-align-items-center ion-justify-content-center">
           <ion-col size="12">
-            <ion-item fill="outline" class="input" lines="none">
+            <ion-item fill="outline" class="input">
               <ion-label position="floating" lablePlacement="stacked"
                 >Father/Husband</ion-label
               >
@@ -67,7 +67,7 @@
 
         <ion-row class="ion-align-items-center ion-justify-content-center">
           <ion-col size="12">
-            <ion-item fill="outline" class="input" lines="none">
+            <ion-item fill="outline" class="input" >
               <ion-label  *ngIf="!f['bloodRequireDate'].value" position="floating" lablePlacement="stacked"
                 >Blood Require Date</ion-label
               >
@@ -87,7 +87,7 @@
         </ion-row>
         <ion-row class="ion-align-items-center ion-justify-content-center">
           <ion-col size="12">
-            <ion-item fill="outline" class="input" lines="none">
+            <ion-item fill="outline" class="input">
               <ion-label position="floating" lablePlacement="stacked"
                 >mobileNo</ion-label
               >
@@ -101,7 +101,7 @@
 
         <ion-row class="ion-align-items-center ion-justify-content-center">
           <ion-col size="12">
-            <ion-item fill="outline" class="input" lines="none">
+            <ion-item fill="outline" class="input" >
               <ion-label position="floating" lablePlacement="stacked"
                 >location</ion-label
               >
@@ -129,7 +129,7 @@
         </ion-row>
         <ion-row class="ion-align-items-center ion-justify-content-center">
           <ion-col size="12">
-            <ion-item fill="outline" class="input" lines="none">
+            <ion-item fill="outline" class="input" >
               <ion-label position="floating" lablePlacement="stacked"
                 >hemoglobin</ion-label
               >
@@ -144,7 +144,7 @@
 
         <ion-row class="ion-align-items-center ion-justify-content-center">
           <ion-col size="12">
-            <ion-item fill="outline" class="input" lines="none">
+            <ion-item fill="outline" class="input">
               <ion-label position="floating" lablePlacement="stacked"
                 >units</ion-label
               >
@@ -159,7 +159,7 @@
 
         <ion-row class="ion-align-items-center ion-justify-content-center">
           <ion-col size="12">
-            <ion-item fill="outline" lines="none">
+            <ion-item fill="outline">
               <ion-label position="floating" lablePlacement="stacked"
                 >State
               </ion-label>
@@ -245,29 +245,6 @@
             </ion-item>
           </ion-col>
         </ion-row>
-
- 
-        <!-- <ion-row class="ion-align-items-center ion-justify-content-center">
-          <ion-col size="12">
-            <ion-item fill="outline">
-              <ion-select
-                aria-label="Fruit"
-                interface="action-sheet"
-                placeholder="Select Blood Group"
-                formControlName="bloodGroup"
-              >
-                <ion-select-option value="A_POSITIVE">A+</ion-select-option>
-                <ion-select-option value="A_NEGATIVE">A-</ion-select-option>
-                <ion-select-option value="B_POSITIVE">B+</ion-select-option>
-                <ion-select-option value="B_NEGATIVE">B-</ion-select-option>
-                <ion-select-option value="AB_POSITIVE">AB+</ion-select-option>
-                <ion-select-option value="AB_NEGATIVE">AB+</ion-select-option>
-                <ion-select-option value="O_POSITIVE">O+</ion-select-option>
-                <ion-select-option value="O_NEGATIVE">O-</ion-select-option>
-              </ion-select>
-            </ion-item>
-          </ion-col>
-        </ion-row> -->
         <ion-row class="ion-align-items-center ion-justify-content-center">
           <ion-col size="12">
             <ion-item fill="outline" class="input">
