--- a/App/src/app/layout/pages/tabs/blood-donations/blood-donations.page.scss
+++ b/App/src/app/layout/pages/tabs/blood-donations/blood-donations.page.scss
@@ -40,3 +40,19 @@ i{
   height: 10px !important;
 }
 
+@media (max-width: 405px) {
+  ion-card{
+    max-height: 159px;
+  }
+
+  ion-label{
+    font-size: 11px;
+  }
+  .align-status{
+    margin-top: 0;
+  }
+  .name{
+    font-size: 14px;
+    font-weight: 600;
+  }
+}
