--- a/App/src/app/shared/models/donation-details/donation-details.component.html
+++ b/App/src/app/shared/models/donation-details/donation-details.component.html
@@ -41,7 +41,7 @@
                   <ion-row>
                     <ion-col size="12">
                       <ion-label class="head">Donation Date </ion-label>
-                      <ion-label> : {{data?.donationDate}}</ion-label>
+                      <ion-label> : {{data?.donationDate | date}}</ion-label>
                     </ion-col>
                   </ion-row>
                   <ion-row>
@@ -143,8 +143,8 @@
                 </form>
 
                 <ion-grid *ngIf="!edit">
-                  <ion-item class="ion-no-padding ion-no-margin" lines="none">
-                    <ion-icon *ngIf="data.status != 'DONE' && data.status != 'CLOSE'"
+                  <ion-item *ngIf="data.status != 'DONE' && data.status != 'CLOSE'" class="ion-no-padding ion-no-margin" lines="none">
+                    <ion-icon 
                       slot="end"
                       color="primary"
                       name="create-outline"
@@ -193,14 +193,14 @@
                 </ion-row>
                 <ion-row>
                   <ion-col size="12">
-                    <ion-label class="head">Age</ion-label>
-                    <ion-label>: {{data?.bloodRequest?.age}}</ion-label>
+                    <ion-label class="head">Gender</ion-label>
+                    <ion-label>: {{data?.bloodRequest?.gender}}</ion-label>
                   </ion-col>
                 </ion-row>
                 <ion-row>
                   <ion-col size="12">
-                    <ion-label class="head">Gender</ion-label>
-                    <ion-label>: {{data?.bloodRequest?.gender}}</ion-label>
+                    <ion-label class="head">Age</ion-label>
+                    <ion-label>: {{data?.bloodRequest?.age}}</ion-label>
                   </ion-col>
                 </ion-row>
                 <ion-row>
